--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="https://forms.gle/2MLjzbuibK9RP9vy7" class="btn-secondary">Для замовників</a>
             <br>
             <br>
-            <a href="UniHelper_Policy.pdf" download>Натискачаючи кнопки зверху ви погоджуєтесь з політикою конфіденційності.</a>
+            <a href="UniHelper_Policy.pdf" download="UniHelper_Policy.pdf">Натискачаючи кнопки зверху ви погоджуєтесь з політикою конфіденційності.</a>
         </div>
     </section>
 
